@@ -7,6 +7,7 @@ import de.dlr.shepard.context.version.daos.VersionableEntityDAO;
 import jakarta.enterprise.context.RequestScoped;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.StreamSupport;
 
 @RequestScoped
@@ -19,14 +20,14 @@ public class URIReferenceDAO extends VersionableEntityDAO<URIReference> {
    * @return a List of references
    */
   public List<URIReference> findByDataObjectNeo4jId(long dataObjectId) {
+    // C5b fix: bind dataObjectId as a Cypher parameter rather than concatenating it.
     String query =
-      "MATCH (d:DataObject)-[hr:has_reference]->%s WHERE ID(d)=%d ".formatted(
-          CypherQueryHelper.getObjectPart("r", "URIReference", false),
-          dataObjectId
+      "MATCH (d:DataObject)-[hr:has_reference]->%s WHERE ID(d)=$dataObjectId ".formatted(
+          CypherQueryHelper.getObjectPart("r", "URIReference", false)
         ) +
       CypherQueryHelper.getReturnPart("r");
 
-    var queryResult = findByQuery(query, Collections.emptyMap());
+    var queryResult = findByQuery(query, Map.of("dataObjectId", dataObjectId));
 
     List<URIReference> result = StreamSupport.stream(queryResult.spliterator(), false)
       .filter(r -> r.getDataObject() != null)
